--- a/server.conf
+++ b/server.conf
@@ -1,9 +1,9 @@
 [FTP]
-username = zl
-host = 172.19.20.30
-password = Jucch_2018
-port = 21
-timeout = 60
+username = 
+host = 
+password = 
+port = 
+timeout = 
 
 [PULL]
 called_ae_title = *        #called ae title
@@ -17,10 +17,10 @@ port = 11113               #本地ae port
 server_sleep = 150
 
 [STORE]
-dicom_store = /media/tx-deepocean/Data/DICOMS/CT
-#dicom_store = /media/tx-deepocean/Data/DICOMS/temple
-image_store = /media/tx-deepocean/Data/output/CT
-#image_store = /media/tx-deepocean/Data/DICOMS/temple
+dicom_store = /.../.../Data/DICOMS/CT
+#dicom_store = /.../.../Data/DICOMS/temple
+image_store = /.../.../Data/output/CT
+#image_store = /.../.../Data/DICOMS/temple
 
 [LOGGER]
 server_logger_path = ./log/watcher.log
@@ -29,9 +29,9 @@ server_logger_level = DEBUG
 clear_logger_level = DEBUG
 
 
-[TXDB]
-host = localhost
-password = txnb
-db = txdatas
-user = tx
+[MYSQLDB]
+host = 
+password = 
+db = 
+user = 
 
